--- a/src/CSS/CookieSheet.css
+++ b/src/CSS/CookieSheet.css
@@ -11,6 +11,12 @@
     transform: scale(0.95, 0.95);
 }
 
-.cardColor {
+.card {
     background-color: #6A768A !important;
+    padding: 0px !important;
+    height: 15vh;
+}
+
+.cardContents {
+    margin: 0px !important;
 }
